--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -200,3 +200,15 @@ runs:
                 echo "$RUNNER_OS is not supported"
                 exit 1
               fi
+
+        - name: Copy Optimizer Jar
+          shell: bash
+          run: |
+              if [ "$RUNNER_OS" == "Linux" || "$RUNNER_OS" == "macOS" ]; then
+                sudo cp -f "${GITHUB_WORKSPACE}/optimizer/src/main/resources/iginx-optimizer-${VERSION}.jar" "${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/lib/"
+              elif [ "$RUNNER_OS" == "Windows" ]; then
+                copy /y "${GITHUB_WORKSPACE}/optimizer/src/main/resources/iginx-optimizer-${VERSION}.jar" "${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/lib/"
+              else
+                echo "$RUNNER_OS is not supported"
+                exit 1
+              fi
