--- a/dataSources/pom.xml
+++ b/dataSources/pom.xml
@@ -29,12 +29,12 @@
 
     <modules>
         <module>filesystem</module>
-        <!--        <module>influxdb</module>-->
+        <module>influxdb</module>
         <module>iotdb12</module>
-        <!--        <module>mongodb</module>-->
-        <!--        <module>parquet</module>-->
-        <!--        <module>redis</module>-->
-        <!--        <module>relational</module>-->
+        <module>mongodb</module>
+        <module>parquet</module>
+        <module>redis</module>
+        <module>relational</module>
     </modules>
 
     <properties>
