--- a/optimizer/pom.xml
+++ b/optimizer/pom.xml
@@ -16,12 +16,14 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
             <artifactId>iginx-core</artifactId>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -46,28 +48,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>com.github.wvengen</groupId>
-                <artifactId>proguard-maven-plugin</artifactId>
-                <version>2.2.0</version>
-                <configuration>
-                    <proguardInclude>${project.basedir}/proguard.cfg</proguardInclude>
-                    <options>
-                        <option>-dontwarn</option>
-                        <option>-ignorewarnings</option>
-                    </options>
-                    <libs>
-                        <lib>${env.JAVA_HOME}/jre/lib/rt.jar</lib>
-                    </libs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>proguard</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
@@ -93,4 +74,40 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>java8</id>
+            <activation>
+                <jdk>[1.8,1.8.999]</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.github.wvengen</groupId>
+                        <artifactId>proguard-maven-plugin</artifactId>
+                        <version>2.6.0</version>
+                        <configuration>
+                            <proguardInclude>${project.basedir}/proguard.cfg</proguardInclude>
+                            <options>
+                                <option>-dontwarn</option>
+                                <option>-ignorewarnings</option>
+                            </options>
+                            <obfuscate>false</obfuscate>
+                            <libs>
+                                <lib>${java.home}/lib/rt.jar</lib>
+                            </libs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>proguard</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
