ci: manually run full test suite

--- a/.github/workflows/full-test-suite.yml
+++ b/.github/workflows/full-test-suite.yml
@@ -3,6 +3,7 @@ name: Full Test Suite
 on:
     schedule:
         - cron: "0 0 * * 0" # every Sunday
+    workflow_dispatch:
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
