--- a/pom.xml
+++ b/pom.xml
@@ -139,17 +139,17 @@
             <dependency>
                 <groupId>org.apache.arrow</groupId>
                 <artifactId>arrow-vector</artifactId>
-                <version>16.0.0</version>
+                <version>17.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.arrow</groupId>
                 <artifactId>arrow-memory-netty</artifactId>
-                <version>16.0.0</version>
+                <version>17.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.arrow</groupId>
                 <artifactId>arrow-algorithm</artifactId>
-                <version>16.0.0</version>
+                <version>17.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
