--- a/.github/actions/service/mysql/action.yml
+++ b/.github/actions/service/mysql/action.yml
@@ -25,13 +25,13 @@ runs:
                 echo "mysqlx    = 0" >> $port.ini
               done
 
-        - if: runner.os == 'Windows'
-          name: Set Case Sensitivity on Windows
+        - if: runner.os == 'Windows' || runner.os == 'macOS'
+          name: Set Case Sensitivity
           shell: bash
           working-directory: ${{ github.action_path }}
           run: |
             for port in ${{ inputs.ports }}; do
-              echo "lower_case_table_names = 2" >> $port.ini
+              echo "lower_case_table_names = 0" >> $port.ini
             done
 
         - name: Start mysql
