--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -4,7 +4,7 @@ storageEngineList=IoTDB12,InfluxDB,Parquet,Relational,MongoDB,Redis,FileSystem
 relationalStorageEngineList=PostgreSQL,MySQL
 
 # the test for every engine
-test-list=PySessionIT#testInsertDF
+test-list=DataSourceIT,SQLSessionIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT
 mongodb-test-list=DataSourceIT,SQLSessionIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,UDFIT,TransformIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT
 
 # the DB config
