--- a/optimizer/pom.xml
+++ b/optimizer/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
             <artifactId>iginx-core</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
