--- a/pom.xml
+++ b/pom.xml
@@ -10,18 +10,19 @@
     <name>IGinX</name>
 
     <modules>
-        <module>core</module>
-        <module>thrift</module>
         <module>shared</module>
+        <module>thrift</module>
+        <module>session</module>
+        <module>jdbc</module>
         <module>client</module>
         <module>antlr</module>
-        <module>jdbc</module>
-        <module>session</module>
+        <module>core</module>
+        <module>optimizer</module>
         <module>dataSources</module>
         <module>example</module>
         <module>test</module>
+        <!-- assembly module must be the last one -->
         <module>assembly</module>
-        <module>optimizer</module>
     </modules>
 
     <distributionManagement>
