add test to check assembly package

--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -35,3 +35,5 @@ jobs:
         uses: ./.github/workflows/remote-test.yml
         with:
             metadata-matrix: '["zookeeper"]'
+    assemebly-test:
+        uses: ./.github/workflows/assembly-test.yml
