feat(python): allow inserting dataframe (#357)
User can use Session.insert_df(df: dataframe, prefix: str) to insert pandas.DataFrame data into IGinX.

df: DataFrame data
prefix(optional): if column names in df does not contain '.', a prefix is required.

--- a/.github/actions/service/mysql/action.yml
+++ b/.github/actions/service/mysql/action.yml
@@ -25,6 +25,15 @@ runs:
                 echo "mysqlx    = 0" >> $port.ini
               done
 
+        - if: runner.os == 'Windows' || runner.os == 'macOS'
+          name: Set Case Sensitivity
+          shell: bash
+          working-directory: ${{ github.action_path }}
+          run: |
+              for port in ${{ inputs.ports }}; do
+                echo "lower_case_table_names = 2" >> $port.ini
+              done
+
         - name: Start mysql
           shell: bash
           working-directory: ${{ github.action_path }}
