--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,27 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>3.6.0</version>
                 </plugin>
+                <plugin>
+                    <groupId>com.mycila</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <version>4.5</version>
+                    <configuration>
+                        <useDefaultExcludes>true</useDefaultExcludes>
+                        <prohibitLegacyUse>true</prohibitLegacyUse>
+                        <licenseSets>
+                            <licenseSet>
+                                <header>LICENSE_HEADER</header>
+                                <excludes>
+                                    <exclude>**/test/resources/**</exclude>
+                                </excludes>
+                            </licenseSet>
+                        </licenseSets>
+                        <mapping>
+                            <thrift>SLASHSTAR_STYLE</thrift>
+                            <g4>SLASHSTAR_STYLE</g4>
+                        </mapping>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -451,6 +472,25 @@
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>license</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.mycila</groupId>
+                        <artifactId>license-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>format</goal>
+                                </goals>
+                                <phase>generate-sources</phase>
                             </execution>
                         </executions>
                     </plugin>
