--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -96,6 +96,9 @@ jobs:
                   mkdir "new"
                   mkdir "new/IGinX"
                   cp -r "IGinX" "new/IGinX"
+                  cd "IGinX"
+                  mkdir "new"
+                  mv "../new" "new"
                   mkdir "old"
                   cd old
                   git clone https://github.com/IGinX-THU/IGinX.git
@@ -111,13 +114,13 @@ jobs:
               with:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
-                  Root-Dir-Path: "../old/IGinX"
+                  Root-Dir-Path: "old/IGinX"
 
             - name: Start Old IGinX
               uses: ./.github/actions/iginxRunner
               with:
                   version: ${VERSION}
-                  Root-Dir-Path: "../old/IGinX"
+                  Root-Dir-Path: "old/IGinX"
 
             - name: Run Regression Test on Old IGinX
               if: always()
@@ -151,13 +154,13 @@ jobs:
               with:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
-                  Root-Dir-Path: "../new/IGinX"
+                  Root-Dir-Path: "new/IGinX"
 
             - name: Start New IGinX
               uses: ./.github/actions/iginxRunner
               with:
                   version: ${VERSION}
-                  Root-Dir-Path: "../new/IGinX"
+                  Root-Dir-Path: "new/IGinX"
 
             - name: Run Regression Test on New IGinX
               if: always()
