--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -115,13 +115,13 @@ jobs:
               with:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
-                  Root-Dir-Path: "old/IGinX"
+                  Root-Dir-Path: "${GITHUB_WORKSPACE}/old/IGinX"
 
             - name: Start Old IGinX
               uses: ./.github/actions/iginxRunner
               with:
                   version: ${VERSION}
-                  Root-Dir-Path: "old/IGinX"
+                  Root-Dir-Path: "${GITHUB_WORKSPACE}/old/IGinX"
 
             - name: Run Regression Test on Old IGinX
               if: always()
@@ -155,13 +155,13 @@ jobs:
               with:
                   DB-name: ${{ matrix.DB-name }}
                   Set-Filter-Fragment-OFF: "true"
-                  Root-Dir-Path: "new/IGinX"
+                  Root-Dir-Path: "${GITHUB_WORKSPACE}/new/IGinX"
 
             - name: Start New IGinX
               uses: ./.github/actions/iginxRunner
               with:
                   version: ${VERSION}
-                  Root-Dir-Path: "new/IGinX"
+                  Root-Dir-Path: "${GITHUB_WORKSPACE}/new/IGinX"
 
             - name: Run Regression Test on New IGinX
               if: always()
