--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -108,7 +108,15 @@ jobs:
             - name: Install IGinX with Maven
               shell: bash
               run: |
+                  cd "core"
+                  pwd
+                  ls
+                  cd ..
                   mvn clean package -DskipTests -P-format -q
+                  cd "core"
+                  pwd
+                  ls
+                  cd ..
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
