--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -123,7 +123,7 @@ jobs:
               run: |
                   if [ "$RUNNER_OS" == "Linux" ]; then
                     chmod +x "${GITHUB_WORKSPACE}/old/IGinX/.github/scripts/iginx/iginx.sh"
-                    "${GITHUB_WORKSPACE}/old/IGinX/.github/scripts/iginx/iginx.sh" 6888 6666
+                    "${GITHUB_WORKSPACE}/old/IGinX/.github/scripts/iginx/iginx.sh" 6888 6666 old/IGinX
                   else
                     echo "$RUNNER_OS is not supported in this test"
                     exit 1
@@ -171,7 +171,7 @@ jobs:
               run: |
                   if [ "$RUNNER_OS" == "Linux" ]; then
                     chmod +x "${GITHUB_WORKSPACE}/new/IGinX/.github/scripts/iginx/iginx.sh"
-                    "${GITHUB_WORKSPACE}/new/IGinX/.github/scripts/iginx/iginx.sh" 6888 6666
+                    "${GITHUB_WORKSPACE}/new/IGinX/.github/scripts/iginx/iginx.sh" 6888 6666 new/IGinX
                   else
                     echo "$RUNNER_OS is not supported in this test"
                     exit 1
