--- a/core/pom.xml
+++ b/core/pom.xml
@@ -150,6 +150,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-memory-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
             <artifactId>arrow-memory-netty</artifactId>
             <scope>runtime</scope>
         </dependency>
