--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -56,4 +56,201 @@
             <version>1.6.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <version>1.9.0</version>
+                <executions>
+                    <execution>
+                        <id>get-arrow-java-root</id>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <url>https://github.com/IGinX-THU/IGinX-resources/raw/main/arrow-snapshot/arrow-java-root-17.0.0-20240709.071332-1.pom</url>
+                            <outputDirectory>${project.build.directory}/external-jars</outputDirectory>
+                            <outputFileName>arrow-java-root-17.0.0-SNAPSHOT.pom</outputFileName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>get-arrow-memory</id>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <url>https://github.com/IGinX-THU/IGinX-resources/raw/main/arrow-snapshot/arrow-memory-17.0.0-20240709.071332-1.pom</url>
+                            <outputDirectory>${project.build.directory}/external-jars</outputDirectory>
+                            <outputFileName>arrow-memory-17.0.0-SNAPSHOT.pom</outputFileName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>get-arrow-memory-core-snapshot</id>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <url>https://github.com/IGinX-THU/IGinX-resources/raw/main/arrow-snapshot/arrow-memory-core-17.0.0-20240709.071332-1.jar</url>
+                            <outputDirectory>${project.build.directory}/external-jars</outputDirectory>
+                            <outputFileName>arrow-memory-core-17.0.0-SNAPSHOT.jar</outputFileName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>get-arrow-memory-netty-snapshot</id>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <url>https://github.com/IGinX-THU/IGinX-resources/raw/main/arrow-snapshot/arrow-memory-netty-17.0.0-20240709.071332-1.jar</url>
+                            <outputDirectory>${project.build.directory}/external-jars</outputDirectory>
+                            <outputFileName>arrow-memory-netty-17.0.0-SNAPSHOT.jar</outputFileName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>get-arrow-memory-netty-buffer-patch</id>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <url>https://github.com/IGinX-THU/IGinX-resources/raw/main/arrow-snapshot/arrow-memory-netty-buffer-patch-17.0.0-20240709.071332-1.jar</url>
+                            <outputDirectory>${project.build.directory}/external-jars</outputDirectory>
+                            <outputFileName>arrow-memory-netty-buffer-patch-17.0.0-SNAPSHOT.jar</outputFileName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>get-arrow-format-snapshot</id>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <url>https://github.com/IGinX-THU/IGinX-resources/raw/main/arrow-snapshot/arrow-format-17.0.0-20240709.071332-1.jar</url>
+                            <outputDirectory>${project.build.directory}/external-jars</outputDirectory>
+                            <outputFileName>arrow-format-17.0.0-SNAPSHOT.jar</outputFileName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>get-arrow-vector-snapshot</id>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <url>https://github.com/IGinX-THU/IGinX-resources/raw/main/arrow-snapshot/arrow-vector-17.0.0-20240709.071332-1.jar</url>
+                            <outputDirectory>${project.build.directory}/external-jars</outputDirectory>
+                            <outputFileName>arrow-vector-17.0.0-SNAPSHOT.jar</outputFileName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>get-arrow-algorithm-snapshot</id>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <url>https://github.com/IGinX-THU/IGinX-resources/raw/main/arrow-snapshot/arrow-algorithm-17.0.0-20240709.071332-1.jar</url>
+                            <outputDirectory>${project.build.directory}/external-jars</outputDirectory>
+                            <outputFileName>arrow-algorithm-17.0.0-SNAPSHOT.jar</outputFileName>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>3.1.2</version>
+                <executions>
+                    <execution>
+                        <id>install-arrow-java-root</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <file>${project.build.directory}/external-jars/arrow-java-root-17.0.0-SNAPSHOT.pom</file>
+                            <pomFile>${project.build.directory}/external-jars/arrow-java-root-17.0.0-SNAPSHOT.pom</pomFile>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-arrow-memory</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <file>${project.build.directory}/external-jars/arrow-memory-17.0.0-SNAPSHOT.pom</file>
+                            <pomFile>${project.build.directory}/external-jars/arrow-memory-17.0.0-SNAPSHOT.pom</pomFile>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-arrow-memory-core-snapshot</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <file>${project.build.directory}/external-jars/arrow-memory-core-17.0.0-SNAPSHOT.jar</file>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-arrow-memory-netty-snapshot</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <file>${project.build.directory}/external-jars/arrow-memory-netty-17.0.0-SNAPSHOT.jar</file>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-arrow-memory-netty-buffer-patch</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <file>${project.build.directory}/external-jars/arrow-memory-netty-buffer-patch-17.0.0-SNAPSHOT.jar</file>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-arrow-format-snapshot</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <file>${project.build.directory}/external-jars/arrow-format-17.0.0-SNAPSHOT.jar</file>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-arrow-vector-snapshot</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <file>${project.build.directory}/external-jars/arrow-vector-17.0.0-SNAPSHOT.jar</file>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-arrow-algorithm-snapshot</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <file>${project.build.directory}/external-jars/arrow-algorithm-17.0.0-SNAPSHOT.jar</file>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
