--- a/core/pom.xml
+++ b/core/pom.xml
@@ -159,6 +159,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-memory-netty-buffer-patch</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
             <artifactId>arrow-algorithm</artifactId>
         </dependency>
         <dependency>
