--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.arrow</groupId>
+                <artifactId>arrow-memory-netty-buffer-patch</artifactId>
+                <version>17.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.arrow</groupId>
                 <artifactId>arrow-algorithm</artifactId>
                 <version>17.0.0-SNAPSHOT</version>
             </dependency>
