--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
                 <version>5.8.26</version>
             </dependency>
             <dependency>
+                <groupId>com.google.flatbuffers</groupId>
+                <artifactId>flatbuffers-java</artifactId>
+                <version>23.5.26</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.arrow</groupId>
                 <artifactId>arrow-vector</artifactId>
                 <version>17.0.0-SNAPSHOT</version>
