--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.arrow</groupId>
+                <artifactId>arrow-format</artifactId>
+                <version>17.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.arrow</groupId>
                 <artifactId>arrow-vector</artifactId>
                 <version>17.0.0-SNAPSHOT</version>
             </dependency>
