--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -38,4 +38,4 @@ jobs:
 
             - name: Test with Maven
               run: |
-                  mvn clean package -pl core -am -P-format -q
+                  mvn clean package -pl dependency -pl core -am -P-format -q
