--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -38,7 +38,7 @@
                                 </goals>
                                 <phase>generate-sources</phase>
                                 <configuration>
-                                    <file>src/main/resources/pemjax.jar</file>
+                                    <file>src/main/resources/pemja-0.5-SNAPSHOT.jar</file>
                                 </configuration>
                             </execution>
                         </executions>
