--- a/optimizer/pom.xml
+++ b/optimizer/pom.xml
@@ -34,6 +34,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
