--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -71,3 +71,7 @@ stand_alone_DB=IoTDB12
 # Local test DB-CE
 is_scaling=false
 DBCE_test_way=oriHasDataExpHasData
+
+# TPC-H test
+max_repetitions_num=10
+regression_threshold=0.3
