--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -94,7 +94,7 @@ jobs:
             - name: Get Old Version
               shell: bash
               run: |
-                  mvn clean package -DskipTests -P-format -q
+                  mvn clean install -DskipTests -P-format -q
             #                  git clone https://github.com/IGinX-THU/IGinX.git
             #                  cd IGinX
             #                  mvn clean package -DskipTests -P-format -q
@@ -143,7 +143,7 @@ jobs:
             - name: Install New IGinX with Maven
               shell: bash
               run: |
-                  mvn clean package -DskipTests -P-format -q
+                  mvn clean install -DskipTests -P-format -q
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
